--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,18 @@
+sudo: required
+
 language: node_js
 node_js:
   - "iojs"
   - "8"
+  
+services:
+  - docker
+  
+  before_install:
+- docker pull csi_cyse 
+- docker run -d -p 9999:9999 csi_cyse /bin/sh -c "cd /usr/src/app; bundle exec foreman start;"
+- docker ps -a
+- docker run csi_cyse /bin/sh -c "cd /usr/src/app; bundle exec rake test"
+
+script:
+  - bundle exec rake test
